@@ -4,7 +4,11 @@ Assignment 2:
 
 Added vertex class: type i-vi test; convex test
 
+Added segment mid-points
+
 Added plot for vertex type, class, coordinates
+
+Added trapezoid class
 
 Added trapezoidation function
 
